Fix spacing between names in footer

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -28,6 +28,7 @@ footer {
 		display: flex;
 
 		&:first-child a {
+			margin-left: 4px;
 			margin-right: 0 !important;
 		}
 	}
